<resources>
    <string name="app_name">MaestroDeLaMultiplicacion_v2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Configuración</string>
    <string name="menu_gallery">¡A entrenar!</string>
    <string name="menu_slideshow">Enviar estadisticas</string>
    <string name="menu_estadisticas">Estadisticas</string>
    <string name="menu_crearUsuario">Gestión de usuarios</string>
    <string name="menu_contactos">Contactos</string>
</resources>