<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/baseline_person_add_black_24dp"
            android:title="@string/menu_crearUsuario" />

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/config"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/jugar"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/nav_stadistics"
            android:icon="@drawable/estadisticas"
            android:title="@string/menu_estadisticas" />

        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/baseline_contacts_black_24dp"
            android:title="@string/menu_contactos" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/send"
            android:title="@string/menu_slideshow" />

    </group>
</menu>